i was joking, this is the last one :)

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
         <div id="container_main">
 
-            <section class="row1"> <!--prima riga-->
+            <section class="rows"> <!--prima riga-->
 
                 <div class="card"><!--riquadro 1-->
                     
@@ -84,7 +84,7 @@
 
             </section>
 
-            <section class="row2"> <!--seconda riga-->
+            <section class="rows"> <!--seconda riga-->
 
                 <div class="card"><!--riquadro 4-->
                     
